<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    tools:context=".MainActivity">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentTop="true"        android:background="@color/colorPrimary"        android:gravity="center_horizontal"        android:orientation="vertical"        android:paddingTop="10dp"        android:paddingBottom="10dp">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/status"            android:textAllCaps="true"            android:textColor="@android:color/white"            android:textSize="12sp"            android:textStyle="bold" />        <TextView            android:id="@+id/tvStatus"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:gravity="center"            android:text="@string/dummy"            android:textAlignment="center"            android:textColor="@android:color/white"            android:textSize="24sp"            android:textStyle="bold" />    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:orientation="vertical">        <Button            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:onClick="connectClick"            android:text="@string/buttonConnect"            android:textAllCaps="true"            android:textSize="24sp"            android:textStyle="bold" />        <Button            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:onClick="disconnectClick"            android:text="@string/buttonDisconnect"            android:textAllCaps="true"            android:textSize="24sp"            android:textStyle="bold" />        <Button            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:onClick="configurationClick"            android:text="@string/configurations"            android:textAllCaps="true"            android:textSize="24sp"            android:textStyle="bold" />        <Button            android:layout_width="fill_parent"            android:layout_height="wrap_content"            android:onClick="viewDatabaseClick"            android:text="@string/view_database"            android:textAllCaps="true"            android:textSize="24sp"            android:textStyle="bold" />    </LinearLayout></RelativeLayout>